--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" href="/img/logo_tab.jpg">
+        <link rel="icon" href="/YouTravo---Travel-Agency/img/logo_tab.jpg">
     <title>Travel</title>
     <!-- style sheet -->
     <link rel="stylesheet" href="mainstyle.css">
@@ -58,15 +58,15 @@
                         GUEST!</p>
                     <div class="promoimg-box">
                         <div class="promoimg-box-container-boxes box-1">
-                            <img src="/img/bg-home-1_1920x1098.jpg" alt="">
+                            <img src="/YouTravo---Travel-Agency/img/bg-home-1_1920x1098.jpg" alt="">
                             <h3 class="promoimg-text-centered">CONNECTED BY TRAVEL</h3>
                         </div>
                         <div class="promoimg-box-container-boxes box-2">
-                            <img src="/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
+                            <img src="/YouTravo---Travel-Agency/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
                             <h3 class="promoimg-text-centered">JUST A RIGHT BALANCE</h3>
                         </div>
                         <div class="promoimg-box-container-boxes box-3">
-                            <img src="/img/eduardo-cruz-SPfydyDuzow-unsplash_1920x1098.jpg" alt="">
+                            <img src="/YouTravo---Travel-Agency/img/eduardo-cruz-SPfydyDuzow-unsplash_1920x1098.jpg" alt="">
                             <h3 class="promoimg-text-centered">REAL LIFE EXPERIENCES</h3>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="grid-img grid-img1">
-                        <img src="/img/bg-home-1_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/bg-home-1_1920x1098.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">SEASONS & CLIMATE</h3>
                             <span class="grid-img-header-underline"></span>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="grid-img grid-img1">
-                        <img src="/img/turkish flags_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/turkish flags_1920x1098.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">NATURE & GEOGRAPHY</h3>
                             <span class="grid-img-header-underline"></span>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="grid-img grid-img1">
-                        <img src="/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">CULTURE & ART IN TURKEY</h3>
                             <span class="grid-img-header-underline"></span>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="grid-img grid-img1">
-                        <img src="/img/turkish flags_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/turkish flags_1920x1098.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">CULINARY CULTURE</h3>
                             <span class="grid-img-header-underline"></span>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="grid-img grid-img1">
-                        <img src="/img/hallstatt-g5401ec488_1920.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/hallstatt-g5401ec488_1920.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">TURKISH LIFESTYLE</h3>
                             <span class="grid-img-header-underline"></span>
@@ -146,7 +146,7 @@
         <!-- about us who we are section -->
         <div class="about-container" id="about-section">
             <div class="about-split">
-                <img src="/img/about_split_image.jpg" alt="">
+                <img src="/YouTravo---Travel-Agency/img/about_split_image.jpg" alt="">
                 <div class="about-content">
                     <span class="about-first-para">MORE THAN 13 YEARS OF TOUR & TRAVEL EXPERIENCE</span>
                     <h3 class="about-header-bolder">WE ARE YOUTRAVO TRAVEL!</h3>
@@ -187,7 +187,7 @@
                 <!--three service cards -->
                 <div class="service-cards-container">
                     <div class="service-card card-one">
-                        <img src="/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
                         <button class="card-btn-oncard">FLIGHTS</button>
                         <div class="card-content">
                             <span class="card-icon-center"></span>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="service-card card-two">
-                        <img src="/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
                         <button class="card-btn-oncard">TRANSPORT</button>
                         <div class="card-content">
                             <span class="card-icon-center"></span>
@@ -211,7 +211,7 @@
                         </div>
                     </div>
                     <div class="service-card card-three">
-                        <img src="/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/joshua-earle--87JyMb9ZfU-unsplash_1920x1098.jpg" alt="">
                         <button class="card-btn-oncard">PROTECTION</button>
                         <div class="card-content">
                             <span class="card-icon-center"></span>
@@ -227,7 +227,7 @@
         </div>
         <!-- counter section starts here -->
         <div class="counter-section" id="package-section">
-            <img src="/img/pexels-lucian-george-541893.jpg" alt="">
+            <img src="/YouTravo---Travel-Agency/img/pexels-lucian-george-541893.jpg" alt="">
             <div class="counter-section-heading">
                 You will enjoy with the most popular parts of Turkey and you will leave unforgettable memories from this
                 country. We also offer local bus or domestic flight options in the same itineraries depending on your
@@ -261,7 +261,7 @@
                 practical travel informations. Lorem Ipsum is simply dummy text.</p>
             <div class="facts-grid-container">
                 <div class="facts-grid-items grid-1">
-                    <img src="/img/travel-facts-1.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-1.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">On arrival in Turkey, you must show a valid passport or other official
                             document that satisfactorily establishes your identity & nationality.</div>
@@ -269,7 +269,7 @@
                     </div>
                 </div>
                 <div class="facts-grid-items grid-2">
-                    <img src="/img/travel-facts-2.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-2.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">Sorry but many Turkish resorts and cities are not planned good enough for
                             wheelchair access, which can make life difficult, however, you will find that Turkish people
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="facts-grid-items grid-3">
-                    <img src="/img/travel-facts-3.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-3.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">The time zone for Turkey is GMT +3 hours (April-September) and GMT +2
                             hours (October-March). Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -287,7 +287,7 @@
                     </div>
                 </div>
                 <div class="facts-grid-items grid-4">
-                    <img src="/img/travel-facts-4.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-4.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">The unit of Turkish money is the Turkish Lira. Lorem Ipsum is simply
                             dummy text of the printing and typesetting industry. The new Turkish Lira (TRY) is the
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="facts-grid-items grid-5">
-                    <img src="/img/travel-facts-6.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-6.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">Bringing your pet with you to Turkey is a multi-step process. Lorem Ipsum
                             is simply dummy text of the printing and typesetting industry..</div>
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="facts-grid-items grid-6">
-                    <img src="/img/travel-facts-5.jpg" alt="travel-fact-helicopterview-image">
+                    <img src="/YouTravo---Travel-Agency/img/travel-facts-5.jpg" alt="travel-fact-helicopterview-image">
                     <div class="facts-content">
                         <div class="fact-text">Family is very important to Turkish people, and you will ﬁnd that
                             children are welcomed everywhere. Lorem Ipsum is simply dummy text of the printing and
@@ -321,13 +321,13 @@
             <!-- three grid gallery sister hotels -->
             <div class="sisters-hotel-grid">
                 <div class="sisters-hotel-grid-item">
-                    <img src="/img/hotel-1.jpg" alt="hotel-1">
+                    <img src="/YouTravo---Travel-Agency/img/hotel-1.jpg" alt="hotel-1">
                 </div>
                 <div class="sisters-hotel-grid-item">
-                    <img src="/img/hotel-2.jpg" alt="hotel-2">
+                    <img src="/YouTravo---Travel-Agency/img/hotel-2.jpg" alt="hotel-2">
                 </div>
                 <div class="sisters-hotel-grid-item">
-                    <img src="/img/hotel-3.jpg" alt="hotel-3">
+                    <img src="/YouTravo---Travel-Agency/img/hotel-3.jpg" alt="hotel-3">
                 </div>
             </div>
             <div class="review-slides-container">
@@ -370,7 +370,7 @@
             </div>
             <div class="contact-split">
                 <div class="contact-section-left">
-                    <img src="/img/hotel-1.jpg" alt="">
+                    <img src="/YouTravo---Travel-Agency/img/hotel-1.jpg" alt="">
                 </div>
                 <div class="contact-section-right">
                     <span class="enquiry-contact-email">E: enquiry@youtravotravel.com</span>
