--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <!-- six image grid gallery starts here -->
                 <div class="six-img-container-grid">
                     <div class="grid-img grid-img1">
-                        <img src="/img/turkish flags_1920x1098.jpg" alt="">
+                        <img src="/YouTravo---Travel-Agency/img/turkish flags_1920x1098.jpg" alt="">
                         <div class="grid-img-content">
                             <h3 class="grid-img-header">GETTING TO KNOW TURKEY</h3>
                             <span class="grid-img-header-underline"></span>
