--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="navbar" id="navbar">
-            <h3 class="logo"><a href="/">YouTravo</a></h3>
+            <h3 class="logo"><a href="/YouTravo---Travel-Agency/">YouTravo</a></h3>
             <nav class="navlinks" id="navlinks">
                 <ul>
                     <li><a href="#about-section">About</a></li>
