--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <input type="text" placeholder="NAME" class="contact-inputs" required>
                         <input type="email" placeholder="EMAIL" class="contact-inputs" required>
                         <input type="tel" placeholder="PHONE" class="contact-inputs" required>
-                        <input type="text" placeholder="country" class="contact-inputs" required>
+                        <input type="text" placeholder="COUNTRY" class="contact-inputs" required>
                         <textarea name="textarea" id="msgtextarea" placeholder="QUERRY" required></textarea>
                         <span class="form-filling-warning-info">* PLEASE COMPLETE ALL FIELDS CORRECTLY</span>
                         <button class="form-submit-btn" id="form-submit-btn">SEND MESSAGE</button>
